# business-brain

./: .env.example  .gitignore  .vercelignore  PRD.md  README.md  STATUS.md  STEEL_PLANT_QUESTIONNAIRE.md  channel-partner-leads-100.md  channel-partner-leads-individuals-100.md  docker-compose.yml  outreach-emails-personalized.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py  requirements.txt
config/: settings.py
public/: index.html
scripts/: init_db.py  seed_metadata.py
src/business_brain/: __init__.py
tests/test_action/: test_api.py  test_auth_edge_cases.py  test_auth_endpoints.py  test_auto_link.py  test_data_access_control.py  test_data_endpoint.py  test_derived_metrics.py  test_error_handling.py  test_focus_api.py  test_invite_flow.py  test_metadata_endpoints.py  test_onboarding_pure.py  test_process_metric_links.py  test_process_step_ranges.py  test_quarantine_api.py  test_role_hierarchy_comprehensive.py  test_setup_flow.py  test_setup_flow_deep.py  test_suggest_metrics.py  test_upload_csv_metadata.py  test_upload_integration.py  test_upload_smart.py  test_user_management.py
tests/test_analysis/: test_agents.py  test_api_router.py  test_compute.py  test_delta_engine.py  test_enumerator.py  test_executor.py  test_fingerprinter.py  test_integration.py  test_learning.py  test_llm_gateway.py  test_models.py  test_scorer.py  test_sql_executor.py
tests/test_cognitive/: test_analyst_agent.py  test_cfo_agent.py  test_column_classifier.py  test_data_engineer_agent.py  test_deep_tier.py  test_graph.py  test_python_analyst_agent.py  (+2 more)
(+291 files in other folders)
